NP-46073 Rename publishStatus to status, add openapi documentations for params on new endpoint
