# docs/openapi.yaml
@@ -482,6 +482,20 @@ paths:
         required: false
         schema:
           type: number
+      - in: query
+        name: status
+        description: "returns documents with given status."
+        example: "PUBLISHED"
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: status_not
+        description: "returns documents without given status."
+        example: "PUBLISHED"
+        required: false
+        schema:
+          type: string
       x-amazon-apigateway-integration:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SearchAwsResourcesFunction.Arn}:live/invocations
@@ -517,6 +531,425 @@ paths:
   /customer/resources:
     get:
       description: "Search for publications by customer"
+      parameters:
+        - in: query
+          name: category
+          description: "Returns documents with this category code, only one category code is allowed."
+          example: "JournalArticle"
+          required: false
+          schema:
+            $ref: "#/components/schemas/CategoryEnum"
+        - in: query
+          name: category_not
+          description: "Returns documents without these category codes. Support list of Enums, seperated by space (+)."
+          example: "JournalArticle"
+          required: false
+          schema:
+            $ref: "#/components/schemas/CategoryEnum"
+        - in: query
+          name: category_should
+          description: "Returns documents with these category codes. Support list of Enums, seperated by space (+)."
+          example: "JournalArticle"
+          required: false
+          schema:
+            $ref: "#/components/schemas/CategoryEnum"
+        - in: query
+          name: contributor_id
+          description: "person id (URI)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: contributor
+          description: "returns document with Author's name or person id(URI)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: contributor_not
+          description: "returns document without Author's names or person ids(URI), seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: contributor_should
+          description: "returns document with Author's names or person ids(URI), seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: created_before
+          description: "Results created before and inclusive the given date, (yyyy-mm-dd)"
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: created_since
+          description: "Results created since and inclusive the given date, (yyyy-mm-dd)
+        "
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: doi
+          description: "returns document with this DOI id"
+          example: "10.1000/123456"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: doi_not
+          description: "returns document without these DOI ids, seperated by space (+)."
+          example: "10.1000/123456"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: doi_should
+          description: "returns document with these DOI ids, seperated by space (+)."
+          example: "10.1000/123456"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: fields
+          description: "'fields=all' will search all fields in documents, or you can specify a comma separated list of fields to search in."
+          example: category,contributor,funding
+          required: false
+          schema:
+            type: string
+            enum: [ all, category,contributor,created_before,created_since,doi,funding,funding_source,id,institution ,isbn,issn,orcid,modified_before,modified_since,project_code,published_before,published_since,title,unit,user,year_reported ]
+        - in: query
+          name: funding
+          description: "Funding source code e.g: NFR, and project_code together separated by ':'"
+          example: "NFR:1234"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: funding_source
+          description: "returns document with this funding source code"
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: funding_source_not
+          description: "returns document without these funding source codes, seperated by space (+)."
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: funding_source_should
+          description: "returns document with these funding source codes, seperated by space (+)."
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: id
+          description: "returns document with the identifier (UUID)"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: id_not
+          description: "returns document without these identifiers (UUID), seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: id_should
+          description: "returns document with these identifiers (UUID), seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: institution
+          description: "returns document with Id, name or acronym of the institution the contributors belong to"
+          example: [ 185, UiO, University of Oslo ]
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: institution_not
+          description: "returns document without Ids, names or acronyms of the institution the contributors belong to, seperated by space (+)."
+          example: [ 185, UiO, University of Oslo ]
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: institution_should
+          description: "returns document with Ids, names or acronyms of the institution the contributors belong to, seperated by space (+)."
+          example: [ 185, UiO, University of Oslo ]
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: isbn
+          description: "returns document with this ISBN id"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: isbn_not
+          description: "returns document without these ISBN ids, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: isbn_should
+          description: "returns document with these ISBN ids, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: issn
+          description: "returns document with this issn"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: issn_not
+          description: "returns document without these issn, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: issn_should
+          description: "returns document with these issn, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: orcid
+          description: "returns document with this ORCID id"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: orcid_not
+          description: "returns document without these ORCID ids, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: orcid_should
+          description: "returns document with these ORCID ids, seperated by space (+)."
+          required: false
+          schema:
+            type: string
+        - in: query
+          deprecated: true
+          name: lang
+          description: "Two letter language code. Using the 'lang' parameter, this is no longer in use, and are ignored"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: modified_before
+          description: "Results modified before and inclusive the given date, (yyyy-mm-dd)"
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: modified_since
+          description: "Results modified since and inclusive the given date, (yyyy-mm-dd)"
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: order
+          description: "SortOrder is either 'asc' or 'desc'. See Search and sort Default sort order is on 'cristin_result_id' in ascending order."
+          example: "asc"
+          required: false
+          schema:
+            type: string
+            enum: [ asc, desc ]
+        - in: query
+          name: page
+          description: "Page number, zero based, see from and size."
+          example: "0"
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: from
+          description: "Start result from item no. zero based [offset] is also accepted. Default is 0"
+          example: "0"
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: size
+          description: "Number of items returned. [per_page|perPage|results|limit] are also accepted.  Default is 15"
+          example: "15"
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: project
+          description: "returns document with this project id (URI)"
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: project_not
+          description: "returns document without these project ids (URI), seperated by space (+)."
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: project_should
+          description: "returns document with these project ids (URI), seperated by space (+)."
+          example: "NFR"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: published_before
+          description: "Results published before and inclusive the given date, (yyyy-mm-dd)"
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: published_since
+          description: "Results published since and inclusive the given date, (yyyy-mm-dd)"
+          example: "2005-03-17"
+          required: false
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: query
+          description: "free text search, all words are searched for in all fields, only documents containing all words are returned"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: sort
+          description: "Sorts on the given field. Default sort order is on 'published_date' in ascending order."
+          required: false
+          example: "category:asc,created_date:desc"
+          schema:
+            type: string
+            enum:
+              - category:asc
+              - category:desc
+              - created_date:asc
+              - created_date:desc
+              - modified_date:asc
+              - modified_date:desc
+              - published_date:asc
+              - published_date:desc
+              - title:asc
+              - title:desc
+              - unit_id:asc
+              - unit_id:desc
+        - in: query
+          name: title
+          description: "returns document with these words in the title"
+          example: "covid-19"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: title_not
+          description: "returns document without these words in the title, seperated by space (+)."
+          example: "covid-19"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: title_should
+          description: "returns document with any of these words in the title, seperated by space (+)."
+          example: "covid-19"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: unit
+          description: "returns document with these words in the Id"
+          example: 185.53.18.10
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: unit_not
+          description: "returns document without these words in the Id, seperated by space (+)."
+          example: 185.53.18.10
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: unit_should
+          description: "returns document with any of these words in the Id, seperated by space (+)."
+          example: 185.53.18.10
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: user
+          description: "returns document with this resource owner (user id (URI))"
+          example: "askeladd:185"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: user_not
+          description: "returns document without these resource owners (user id (URI)), seperated by space (+)."
+          example: "askeladd:185"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: user_should
+          description: "returns document with any of these resource owners (user id (URI)), seperated by space (+)."
+          example: "askeladd:185"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: publication_year
+          description: "returns document with this publication year"
+          example: "2022"
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: publication_year_should
+          description: "returns document with any of these publication years, seperated by space (+)."
+          example: "2022 2023"
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: status
+          description: "returns documents with given status."
+          example: "PUBLISHED"
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: status_not
+          description: "returns documents without given status."
+          example: "PUBLISHED"
+          required: false
+          schema:
+            type: string
       security:
         - CognitoUserPool: [
           "https://api.nva.unit.no/scopes/backend",
