# search-commons/src/main/java/no/unit/nva/search2/enums/ResourceParameter.java
@@ -131,9 +131,6 @@ public enum ResourceParameter implements ParameterKey {
     PROJECT(KEYWORD, PROJECTS_ID),
     PROJECT_NOT(KEYWORD, MUST_NOT, PROJECTS_ID),
     PROJECT_SHOULD(KEYWORD, SHOULD, PROJECTS_ID),
-    PUBLISH_STATUS(KEYWORD, MUST, PUBLICATION_STATUS),
-    PUBLISH_STATUS_NOT(KEYWORD, MUST_NOT, PUBLICATION_STATUS),
-    PUBLISH_STATUS_SHOULD(KEYWORD, SHOULD, PUBLICATION_STATUS),
     PUBLISHED_BETWEEN(ParamKind.DATE, BETWEEN, PUBLISHED_DATE),
     PUBLISHED_BEFORE(ParamKind.DATE, FieldOperator.LESS_THAN, PUBLISHED_DATE),
     PUBLISHED_SINCE(ParamKind.DATE, FieldOperator.GREATER_THAN_OR_EQUAL_TO, PUBLISHED_DATE),
@@ -143,6 +140,9 @@ public enum ResourceParameter implements ParameterKey {
     PUBLISHER_ID(KEYWORD, MUST, PUBLISHER_ID_KEYWORD),
     PUBLISHER_ID_NOT(KEYWORD, MUST_NOT, PUBLISHER_ID_KEYWORD),
     PUBLISHER_ID_SHOULD(KEYWORD, SHOULD, PUBLISHER_ID_KEYWORD),
+    STATUS(KEYWORD, MUST, PUBLICATION_STATUS),
+    STATUS_NOT(KEYWORD, MUST_NOT, PUBLICATION_STATUS),
+    STATUS_SHOULD(KEYWORD, SHOULD, PUBLICATION_STATUS),
     TAGS(TEXT, ENTITY_TAGS),
     TAGS_NOT(TEXT, MUST_NOT, ENTITY_TAGS),
     TAGS_SHOULD(TEXT, SHOULD, ENTITY_TAGS),
